--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,8 +6,8 @@ build:
     python: "3.8"
       # Install our python package before building the docs
       install:
-        - method: pip
-          path: .
+        method: pip
+        path: .
 
 sphinx:
   fail_on_warning: true
