--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,9 +5,11 @@ build:
   tools:
     python: "3.8"
       # Install our python package before building the docs
-      install:
-        method: pip
-        path: .
-
+      
 sphinx:
   fail_on_warning: true
+
+python:
+  install:
+    - method: pip
+      path: .
